net/mlx5: Introduce control IRQ request API (jsc#PED-1549).

--- a/series.conf
+++ b/series.conf
@@ -9041,6 +9041,7 @@
 	patches.suse/mlxsw-spectrum_acl_bloom_filter-Add-support-for-Spec.patch
 	patches.suse/mlxsw-spectrum-Extend-to-support-Spectrum-4-ASIC.patch
 	patches.suse/net-mlx5-mlx5e_hv_vhca_stats_create-return-type-to-v.patch
+	patches.suse/net-mlx5-Introduce-control-IRQ-request-API.patch
 	patches.suse/net-tls-Fix-skb-memory-leak-when-running-kTLS-traffi.patch
 	patches.suse/net-mscc-ocelot-fix-incorrect-balancing-with-down-LA.patch
 	patches.suse/can-mcp251xfd-mcp251xfd_tef_obj_read-fix-typo-in-err.patch
