--- a/series.conf
+++ b/series.conf
@@ -11557,6 +11557,7 @@
 	patches.suse/vxcan-enable-local-echo-for-sent-CAN-frames.patch
 	patches.suse/can-etas_es58x-es58x_fd_rx_event_msg-initialize-rx_e.patch
 	patches.suse/net-mlx4-Delete-useless-moduleparam-include.patch
+	patches.suse/net-mlx5-Delete-useless-module.h-include.patch
 	patches.suse/ieee80211-add-EHT-1K-aggregation-definitions.patch
 	patches.suse/iwlwifi-mvm-Don-t-call-iwl_mvm_sta_from_mac80211-wit.patch
 	patches.suse/iwlwifi-mvm-offload-channel-switch-timing-to-FW.patch
