--- a/series.conf
+++ b/series.conf
@@ -665,6 +665,7 @@
 	patches.suse/nfp-flower-ct-add-actions-into-flow_pay-for-offload.patch
 	patches.suse/nfp-flower-ct-add-flow_pay-to-the-offload-table.patch
 	patches.suse/nfp-flower-ct-add-offload-calls-to-the-nfp.patch
+	patches.suse/nfp-flower-tc-add-flow-stats-updates-for-ct.patch
 	patches.suse/nfp-fix-return-statement-in-nfp_net_parse_meta.patch
 	patches.suse/compat-make-linux-compat.h-available-everywhere.patch
 	patches.suse/ethtool-improve-compat-ioctl-handling.patch
