--- a/series.conf
+++ b/series.conf
@@ -8621,6 +8621,7 @@
 	patches.suse/net-mlx5e-Specify-out-ifindex-when-looking-up-decap-.patch
 	patches.suse/net-mlx5-E-switch-Remove-vport-enabled-check.patch
 	patches.suse/net-mlx5-E-switch-Reuse-mlx5_eswitch_set_vport_mac.patch
+	patches.suse/net-mlx5-E-switch-move-offloads-mode-callbacks-to-of.patch
 	patches.suse/Bluetooth-L2CAP-Fix-not-initializing-sk_peer_pid.patch
 	patches.suse/Bluetooth-btusb-Fix-application-of-sizeof-to-pointer.patch
 	patches.suse/Bluetooth-Fix-debugfs-entry-leak-in-hci_register_dev.patch
