iavf: Add change MTU message (jsc#PED-835).

--- a/series.conf
+++ b/series.conf
@@ -8682,6 +8682,7 @@
 	patches.suse/igc-enable-XDP-metadata-in-driver.patch
 	patches.suse/net-ice-Fix-boolean-assignment.patch
 	patches.suse/net-ice-Remove-unused-enum.patch
+	patches.suse/iavf-Add-change-MTU-message.patch
 	patches.suse/qed-Enhance-rammod-debug-prints-to-provide-pretty-de.patch
 	patches.suse/qed-enhance-tx-timeout-debug-info.patch
 	patches.suse/qed-esl-priv-flag-support-through-ethtool.patch
