--- a/series.conf
+++ b/series.conf
@@ -3358,6 +3358,7 @@
 	patches.suse/riscv-dts-microchip-mpfs-icicle-Fix-serial-console.patch
 	patches.suse/vDPA-ifcvf-introduce-get_dev_type-which-returns-virt.patch
 	patches.suse/vDPA-ifcvf-implement-management-netlink-framework-fo.patch
+	patches.suse/vDPA-ifcvf-detect-and-use-the-onboard-number-of-queu.patch
 	patches.suse/virtio-blk-remove-unneeded-likely-statements.patch
 	patches.suse/iova-Export-alloc_iova_fast-and-free_iova_fast.patch
 	patches.suse/cifs-update-FSCTL-definitions.patch
