--- a/series.conf
+++ b/series.conf
@@ -6035,6 +6035,7 @@
 	patches.suse/netdevsim-take-rtnl_lock-when-assigning-num_vfs.patch
 	patches.suse/netdevsim-move-vfconfig-to-nsim_dev.patch
 	patches.suse/netdevsim-move-details-of-vf-config-to-dev.patch
+	patches.suse/netdevsim-move-max-vf-config-to-dev.patch
 	patches.suse/net-smc-Introduce-tracepoint-for-fallback
 	patches.suse/net-smc-Introduce-tracepoints-for-tx-and-rx-msg
 	patches.suse/net-smc-Introduce-tracepoint-for-smcr-link-down
