--- a/series.conf
+++ b/series.conf
@@ -657,6 +657,7 @@
 	patches.suse/ionic-drop-useless-check-of-PCI-driver-data-validity.patch
 	patches.suse/ionic-cleanly-release-devlink-instance.patch
 	patches.suse/net-usb-asix-ax88772-add-missing-stop.patch
+	patches.suse/nfp-flower-make-the-match-compilation-functions-reus.patch
 	patches.suse/nfp-fix-return-statement-in-nfp_net_parse_meta.patch
 	patches.suse/compat-make-linux-compat.h-available-everywhere.patch
 	patches.suse/ethtool-improve-compat-ioctl-handling.patch
