vdpa/mlx5: Remove mtu field from vdpa net device (jsc#PED-1549).

--- a/series.conf
+++ b/series.conf
@@ -6487,6 +6487,7 @@
 	patches.suse/vdpa-add-new-callback-get_vq_num_min-in-vdpa_config_.patch
 	patches.suse/vdpa-min-vq-num-of-vdpa-device-cannot-be-greater-tha.patch
 	patches.suse/vdpa-add-new-attribute-VDPA_ATTR_DEV_MIN_VQ_SIZE.patch
+	patches.suse/vdpa-mlx5-Remove-mtu-field-from-vdpa-net-device.patch
 	patches.suse/virtio_ring-check-desc-NULL-when-using-indirect-with.patch
 	patches.suse/MAINTAINERS-add-an-entry-for-NXP-S32G-boards.patch
 	patches.suse/ARM-s3c-irq-s3c24xx-Fix-return-value-check-for-s3c24.patch
