net: mscc: ocelot: add gate and police action offload to PSFP (jsc#PED-1549).

--- a/series.conf
+++ b/series.conf
@@ -8643,6 +8643,7 @@
 	patches.suse/ixgbevf-Add-support-for-new-mailbox-communication-be.patch
 	patches.suse/tcp-add-missing-htmldocs-for-skb-ll_node-and-sk-defe.patch
 	patches.suse/net-mscc-ocelot-set-vcap-IS2-chain-to-goto-PSFP-chai.patch
+	patches.suse/net-mscc-ocelot-add-gate-and-police-action-offload-t.patch
 	patches.suse/mlxsw-constify-address-in-mlxsw_sp_port_dev_addr_set.patch
 	patches.suse/ipw2200-constify-address-in-ipw_send_adapter_address.patch
 	patches.suse/amd-lance-use-eth_hw_addr_set.patch
