net/mlx5: Lag, don't use magic numbers for ports (jsc#PED-1549).

--- a/series.conf
+++ b/series.conf
@@ -11494,6 +11494,7 @@
 	patches.suse/net-mlx5-E-switch-remove-special-uplink-ingress-ACL-.patch
 	patches.suse/net-mlx5-E-switch-add-drop-rule-support-to-ingress-A.patch
 	patches.suse/net-mlx5-Lag-use-local-variable-already-defined-to-a.patch
+	patches.suse/net-mlx5-Lag-don-t-use-magic-numbers-for-ports.patch
 	patches.suse/sfc-default-config-to-1-channel-core-in-local-NUMA-n.patch
 	patches.suse/sfc-set-affinity-hints-in-local-NUMA-node-only.patch
 	patches.suse/tuntap-add-sanity-checks-about-msg_controllen-in-sen.patch
