net/mlx5: DR, Rename list field in matcher struct to list_node (jsc#PED-1549).

--- a/series.conf
+++ b/series.conf
@@ -8993,6 +8993,7 @@
 	patches.suse/net-mlx5-DR-Fix-error-flow-in-creating-matcher.patch
 	patches.suse/net-mlx5-DR-Fix-lower-case-macro-prefix-mlx5_-to-MLX.patch
 	patches.suse/net-mlx5-DR-Remove-unused-struct-member-in-matcher.patch
+	patches.suse/net-mlx5-DR-Rename-list-field-in-matcher-struct-to-l.patch
 	patches.suse/bpf-Do-not-WARN-in-bpf_warn_invalid_xdp_action.patch
 	patches.suse/bpf-Let-bpf_warn_invalid_xdp_action-report-more-info.patch
 	patches.suse/bpf-Introduce-composable-reg-ret-and-arg-types.patch
