net/mlx5e: MPLSoUDP encap, support action vlan pop_eth explicitly (jsc#PED-1549).

--- a/series.conf
+++ b/series.conf
@@ -11689,6 +11689,7 @@
 	patches.suse/bareudp-use-ipv6_mod_enabled-to-check-if-IPv6-enable.patch
 	patches.suse/net-sched-add-vlan-push_eth-and-pop_eth-action-to-th.patch
 	patches.suse/net-mlx5e-MPLSoUDP-decap-use-vlan-push_eth-instead-o.patch
+	patches.suse/net-mlx5e-MPLSoUDP-encap-support-action-vlan-pop_eth.patch
 	patches.suse/net-stmmac-clean-up-impossible-condition.patch
 	patches.suse/bnx2x-use-correct-format-characters.patch
 	patches.suse/mt76-mt7921-fix-mt7921_queues_acq-implementation.patch
