--- a/series.conf
+++ b/series.conf
@@ -9758,6 +9758,7 @@
 	patches.suse/vdpa-Avoid-duplicate-call-to-vp_vdpa-get_status.patch
 	patches.suse/vdpa-Mark-vdpa_config_ops.get_vq_notification-as-opt.patch
 	patches.suse/virtio-virtio_mem-handle-a-possible-NULL-as-a-memcpy.patch
+	patches.suse/vdpa-mlx5-Fix-wrong-configuration-of-virtio_version_.patch
 	patches.suse/virtio_ring-mark-ring-unused-on-error.patch
 	patches.suse/vdpa-clean-up-get_config_size-ret-value-handling.patch
 	patches.suse/dmaengine-idxd-rework-descriptor-free-path-on-failur.patch
