--- a/series.conf
+++ b/series.conf
@@ -5256,6 +5256,7 @@
 	patches.suse/mlxsw-spectrum-Do-not-return-an-error-in-mlxsw_sp_po.patch
 	patches.suse/mlxsw-Track-per-module-port-status.patch
 	patches.suse/mlxsw-reg-Add-fields-to-PMAOS-register.patch
+	patches.suse/mlxsw-Make-PMAOS-pack-function-more-generic.patch
 	patches.suse/net-chelsio-cxgb4vf-Make-use-of-the-helper-function-.patch
 	patches.suse/octeontx2-pf-CN10K-Hide-RPM-stats-over-ethtool.patch
 	patches.suse/octeontx2-af-Hardware-configuration-for-inline-IPsec.patch
