mlxsw: Use u16 for local_port field instead of u8 (jsc#PED-1549).

--- a/series.conf
+++ b/series.conf
@@ -8696,6 +8696,7 @@
 	patches.suse/mlxsw-reg-Align-existing-registers-to-use-extended-l.patch
 	patches.suse/mlxsw-reg-Increase-port_num-field-in-PMTDB-register.patch
 	patches.suse/mlxsw-reg-Adjust-PPCNT-register-to-support-local-por.patch
+	patches.suse/mlxsw-Use-u16-for-local_port-field-instead-of-u8.patch
 	patches.suse/qed-Enhance-rammod-debug-prints-to-provide-pretty-de.patch
 	patches.suse/qed-enhance-tx-timeout-debug-info.patch
 	patches.suse/qed-esl-priv-flag-support-through-ethtool.patch
