--- a/series.conf
+++ b/series.conf
@@ -11362,6 +11362,7 @@
 	patches.suse/net-mlx5e-TC-Split-pedit-offloads-verify-from-alloc_.patch
 	patches.suse/net-mlx5e-TC-Pass-attr-to-tc_act-can_offload.patch
 	patches.suse/net-mlx5e-TC-Refactor-mlx5e_tc_add_flow_mod_hdr-to-g.patch
+	patches.suse/net-mlx5e-TC-Reject-rules-with-multiple-CT-actions.patch
 	patches.suse/ethtool-add-header-data-split-indication.patch
 	patches.suse/bnxt-report-header-data-split-state.patch
 	patches.suse/Bluetooth-btintel-Fix-WBS-setting-for-Intel-legacy-R.patch
