--- a/series.conf
+++ b/series.conf
@@ -11455,6 +11455,7 @@
 	patches.suse/net-mlx5e-Use-select-queue-parameters-to-sync-with-c.patch
 	patches.suse/net-mlx5e-Move-repeating-code-that-gets-TC-prio-into.patch
 	patches.suse/net-mlx5e-Use-READ_ONCE-WRITE_ONCE-for-DCBX-trust-st.patch
+	patches.suse/net-mlx5e-Optimize-mlx5e_select_queue.patch
 	patches.suse/selftests-mptcp-add-csum-mib-check-for-mptcp_connect.patch
 	patches.suse/net-ibmvnic-Cleanup-workaround-doing-an-EOI-after-pa.patch
 	patches.suse/ionic-catch-transition-back-to-RUNNING-with-fw_gener.patch
