--- a/series.conf
+++ b/series.conf
@@ -8883,6 +8883,7 @@
 	patches.suse/igc-Remove-obsolete-nvm-type.patch
 	patches.suse/igc-Remove-obsolete-mask.patch
 	patches.suse/igc-Remove-obsolete-define.patch
+	patches.suse/igb-remove-never-changed-variable-ret_val.patch
 	patches.suse/devlink-Add-new-io_eq_size-generic-device-param.patch
 	patches.suse/devlink-Add-new-event_eq_size-generic-device-param.patch
 	patches.suse/mt76-mt7921-drop-offload_flags-overwritten.patch
