net/mlx5: Fix format-security build warnings (jsc#PED-1549).

--- a/series.conf
+++ b/series.conf
@@ -8610,6 +8610,7 @@
 	patches.suse/net-gro-move-skb_gro_receive-into-net-core-gro.c.patch
 	patches.suse/net-gro-populate-net-core-gro.c.patch
 	patches.suse/net-mlx5e-Support-ethtool-cq-mode.patch
+	patches.suse/net-mlx5-Fix-format-security-build-warnings.patch
 	patches.suse/Bluetooth-L2CAP-Fix-not-initializing-sk_peer_pid.patch
 	patches.suse/Bluetooth-btusb-Fix-application-of-sizeof-to-pointer.patch
 	patches.suse/Bluetooth-Fix-debugfs-entry-leak-in-hci_register_dev.patch
