--- a/series.conf
+++ b/series.conf
@@ -9774,6 +9774,7 @@
 	patches.suse/vdpa-mlx5-Report-max-device-capabilities.patch
 	patches.suse/vdpa-Avoid-taking-cf_mutex-lock-on-get-status.patch
 	patches.suse/vdpa-Protect-vdpa-reset-with-cf_mutex.patch
+	patches.suse/vdpa-mlx5-Fix-is_index_valid-to-refer-to-features.patch
 	patches.suse/dmaengine-idxd-rework-descriptor-free-path-on-failur.patch
 	patches.suse/dmaengine-idxd-int-handle-management-refactoring.patch
 	patches.suse/dmaengine-idxd-move-interrupt-handle-assignment.patch
