--- a/series.conf
+++ b/series.conf
@@ -8990,6 +8990,7 @@
 	patches.suse/igb-move-PEROUT-and-EXTTS-isr-logic-to-separate-func.patch
 	patches.suse/igb-support-PEROUT-on-82580-i354-i350.patch
 	patches.suse/igb-support-EXTTS-on-82580-i354-i350.patch
+	patches.suse/net-mlx5-DR-Fix-error-flow-in-creating-matcher.patch
 	patches.suse/bpf-Do-not-WARN-in-bpf_warn_invalid_xdp_action.patch
 	patches.suse/bpf-Let-bpf_warn_invalid_xdp_action-report-more-info.patch
 	patches.suse/bpf-Introduce-composable-reg-ret-and-arg-types.patch
