--- a/series.conf
+++ b/series.conf
@@ -11351,6 +11351,7 @@
 	patches.suse/ixgbevf-Remove-useless-DMA-32-fallback-configuration.patch
 	patches.suse/i40e-Remove-useless-DMA-32-fallback-configuration.patch
 	patches.suse/e1000e-Remove-useless-DMA-32-fallback-configuration.patch
+	patches.suse/iavf-Remove-useless-DMA-32-fallback-configuration.patch
 	patches.suse/ethtool-add-header-data-split-indication.patch
 	patches.suse/bnxt-report-header-data-split-state.patch
 	patches.suse/Bluetooth-btintel-Fix-WBS-setting-for-Intel-legacy-R.patch
