--- a/series.conf
+++ b/series.conf
@@ -8763,6 +8763,7 @@
 	patches.suse/net-dsa-hellcreek-Allow-PTP-P2P-measurements-on-bloc.patch
 	patches.suse/net-dsa-hellcreek-Add-missing-PTP-via-UDP-rules.patch
 	patches.suse/net-mlx5e-Add-tc-action-infrastructure.patch
+	patches.suse/net-mlx5e-Add-goto-to-tc-action-infra.patch
 	patches.suse/gve-Correct-order-of-processing-device-options.patch
 	patches.suse/gve-Move-the-irq-db-indexes-out-of-the-ntfy-block-st.patch
 	patches.suse/gve-Update-gve_free_queue_page_list-signature.patch
