vhost: fix hung thread due to erroneous iotlb entries (jsc#PED-1549).

--- a/series.conf
+++ b/series.conf
@@ -10725,6 +10725,7 @@
 	patches.suse/vdpa-factor-out-vdpa_set_features_unlocked-for-vdpa-.patch
 	patches.suse/vdpa-mlx5-should-verify-CTRL_VQ-feature-exists-for-M.patch
 	patches.suse/vdpa-mlx5-add-validation-for-VIRTIO_NET_CTRL_MQ_VQ_P.patch
+	patches.suse/vhost-fix-hung-thread-due-to-erroneous-iotlb-entries.patch
 	patches.suse/virtio-blk-Don-t-use-MAX_DISCARD_SEGMENTS-if-max_dis.patch
 	patches.suse/x86-speculation-rename-retpoline_amd-to-retpoline_lfence.patch
 	patches.suse/x86-speculation-add-eibrs-retpoline-options.patch
