--- a/series.conf
+++ b/series.conf
@@ -11692,6 +11692,7 @@
 	patches.suse/net-mlx5e-MPLSoUDP-encap-support-action-vlan-pop_eth.patch
 	patches.suse/net-stmmac-clean-up-impossible-condition.patch
 	patches.suse/bnx2x-use-correct-format-characters.patch
+	patches.suse/net-mlx5e-Validate-MTU-when-building-non-linear-lega.patch
 	patches.suse/mt76-mt7921-fix-mt7921_queues_acq-implementation.patch
 	patches.suse/mt76-fix-monitor-mode-crash-with-sdio-driver.patch
 	patches.suse/rfkill-make-new-event-layout-opt-in.patch
