net/mlx5e: Refactor set_pflag_cqe_based_moder (jsc#PED-1549).

--- a/series.conf
+++ b/series.conf
@@ -9051,6 +9051,7 @@
 	patches.suse/net-mlx5e-Unblock-setting-vid-0-for-VF-in-case-PF-is.patch
 	patches.suse/net-mlx5e-Fix-feature-check-per-profile.patch
 	patches.suse/net-mlx5e-Move-HW-GRO-and-CQE-compression-check-to-f.patch
+	patches.suse/net-mlx5e-Refactor-set_pflag_cqe_based_moder.patch
 	patches.suse/net-tls-Fix-skb-memory-leak-when-running-kTLS-traffi.patch
 	patches.suse/net-mscc-ocelot-fix-incorrect-balancing-with-down-LA.patch
 	patches.suse/can-mcp251xfd-mcp251xfd_tef_obj_read-fix-typo-in-err.patch
