vdpa: fix use-after-free on vp_vdpa_remove (jsc#PED-1549).

--- a/series.conf
+++ b/series.conf
@@ -10727,6 +10727,7 @@
 	patches.suse/vdpa-mlx5-add-validation-for-VIRTIO_NET_CTRL_MQ_VQ_P.patch
 	patches.suse/vhost-fix-hung-thread-due-to-erroneous-iotlb-entries.patch
 	patches.suse/virtio-blk-Don-t-use-MAX_DISCARD_SEGMENTS-if-max_dis.patch
+	patches.suse/vdpa-fix-use-after-free-on-vp_vdpa_remove.patch
 	patches.suse/x86-speculation-rename-retpoline_amd-to-retpoline_lfence.patch
 	patches.suse/x86-speculation-add-eibrs-retpoline-options.patch
 	patches.suse/documentation-hw-vuln-update-spectre-doc.patch
