net/mlx5e: Fix VF min/max rate parameters interchange mistake (jsc#PED-1549).

--- a/series.conf
+++ b/series.conf
@@ -10528,6 +10528,7 @@
 	patches.suse/net-mlx5e-Fix-MPLSoUDP-encap-to-use-MPLS-action-info.patch
 	patches.suse/net-mlx5e-MPLSoUDP-decap-fix-check-for-unsupported-m.patch
 	patches.suse/net-mlx5e-Add-missing-increment-of-count.patch
+	patches.suse/net-mlx5e-Fix-VF-min-max-rate-parameters-interchange.patch
 	patches.suse/Revert-xen-netback-remove-hotplug-status-once-it-has.patch
 	patches.suse/Revert-xen-netback-Check-for-hotplug-status-existenc.patch
 	patches.suse/bnx2x-fix-driver-load-from-initrd.patch
