netdevsim: move details of vf config to dev (jsc#PED-1549).

--- a/series.conf
+++ b/series.conf
@@ -6034,6 +6034,7 @@
 	patches.suse/ethtool-don-t-drop-the-rtnl_lock-half-way-thru-the-i.patch
 	patches.suse/netdevsim-take-rtnl_lock-when-assigning-num_vfs.patch
 	patches.suse/netdevsim-move-vfconfig-to-nsim_dev.patch
+	patches.suse/netdevsim-move-details-of-vf-config-to-dev.patch
 	patches.suse/net-smc-Introduce-tracepoint-for-fallback
 	patches.suse/net-smc-Introduce-tracepoints-for-tx-and-rx-msg
 	patches.suse/net-smc-Introduce-tracepoint-for-smcr-link-down
