--- a/series.conf
+++ b/series.conf
@@ -11368,6 +11368,7 @@
 	patches.suse/net-mlx5e-Refactor-eswitch-attr-flags-to-just-attr-f.patch
 	patches.suse/net-mlx5e-Test-CT-and-SAMPLE-on-flow-attr.patch
 	patches.suse/net-mlx5e-TC-Store-mapped-tunnel-id-on-flow-attr.patch
+	patches.suse/net-mlx5e-CT-Remove-redundant-flow-args-from-tc-ct-c.patch
 	patches.suse/ethtool-add-header-data-split-indication.patch
 	patches.suse/bnxt-report-header-data-split-state.patch
 	patches.suse/Bluetooth-btintel-Fix-WBS-setting-for-Intel-legacy-R.patch
