--- a/series.conf
+++ b/series.conf
@@ -11323,6 +11323,7 @@
 	patches.suse/net-xdp-add-xdp_update_skb_shared_info-utility-routi.patch
 	patches.suse/xdp-add-frags-support-to-xdp_return_-buff-frame.patch
 	patches.suse/bpf-introduce-BPF_F_XDP_HAS_FRAGS-flag-in-prog_flags.patch
+	patches.suse/bpf-introduce-bpf_xdp_get_buff_len-helper.patch
 	patches.suse/ionic-fix-type-complaint-in-ionic_dev_cmd_clean.patch
 	patches.suse/ionic-start-watchdog-after-all-is-setup.patch
 	patches.suse/ionic-Don-t-send-reset-commands-if-FW-isn-t-running.patch
