--- a/series.conf
+++ b/series.conf
@@ -6492,6 +6492,7 @@
 	patches.suse/vdpa-mlx5-Propagate-link-status-from-device-to-vdpa-.patch
 	patches.suse/virtio_ring-check-desc-NULL-when-using-indirect-with.patch
 	patches.suse/vdpa-Introduce-and-use-vdpa-device-get-set-config-he.patch
+	patches.suse/vdpa-Introduce-query-of-device-config-layout.patch
 	patches.suse/MAINTAINERS-add-an-entry-for-NXP-S32G-boards.patch
 	patches.suse/ARM-s3c-irq-s3c24xx-Fix-return-value-check-for-s3c24.patch
 	patches.suse/arm64-zynqmp-Do-not-duplicate-flash-partition-label-.patch
