vdpa/mlx5: Clear ready indication for control VQ (jsc#PED-1549).

--- a/series.conf
+++ b/series.conf
@@ -3806,6 +3806,7 @@
 	patches.suse/mmc-renesas_sdhi-fix-regression-with-hard-reset-on-o.patch
 	patches.suse/vduse-missing-error-code-in-vduse_init.patch
 	patches.suse/vduse-Cleanup-the-old-kernel-states-after-reset-fail.patch
+	patches.suse/vdpa-mlx5-Clear-ready-indication-for-control-VQ.patch
 	patches.suse/fs-verity-fix-signed-integer-overflow-with-i_size-ne.patch
 	patches.suse/NIOS2-fix-kconfig-unmet-dependency-warning-for-SERIA.patch
 	patches.suse/NIOS2-setup.c-drop-unused-variable-dram_start.patch
