vdpa: Protect vdpa reset with cf_mutex (jsc#PED-1549).

--- a/series.conf
+++ b/series.conf
@@ -9773,6 +9773,7 @@
 	patches.suse/vdpa-Support-reporting-max-device-capabilities.patch
 	patches.suse/vdpa-mlx5-Report-max-device-capabilities.patch
 	patches.suse/vdpa-Avoid-taking-cf_mutex-lock-on-get-status.patch
+	patches.suse/vdpa-Protect-vdpa-reset-with-cf_mutex.patch
 	patches.suse/dmaengine-idxd-rework-descriptor-free-path-on-failur.patch
 	patches.suse/dmaengine-idxd-int-handle-management-refactoring.patch
 	patches.suse/dmaengine-idxd-move-interrupt-handle-assignment.patch
