--- a/series.conf
+++ b/series.conf
@@ -6033,6 +6033,7 @@
 	patches.suse/devlink-expose-get-put-functions.patch
 	patches.suse/ethtool-don-t-drop-the-rtnl_lock-half-way-thru-the-i.patch
 	patches.suse/netdevsim-take-rtnl_lock-when-assigning-num_vfs.patch
+	patches.suse/netdevsim-move-vfconfig-to-nsim_dev.patch
 	patches.suse/net-smc-Introduce-tracepoint-for-fallback
 	patches.suse/net-smc-Introduce-tracepoints-for-tx-and-rx-msg
 	patches.suse/net-smc-Introduce-tracepoint-for-smcr-link-down
