--- a/series.conf
+++ b/series.conf
@@ -3363,6 +3363,7 @@
 	patches.suse/vdpa-mlx5-Remove-redundant-header-file-inclusion.patch
 	patches.suse/vdpa-mlx5-function-prototype-modifications-in-prepar.patch
 	patches.suse/vdpa-mlx5-Decouple-virtqueue-callback-from-struct-ml.patch
+	patches.suse/vdpa-mlx5-Ensure-valid-indices-are-provided.patch
 	patches.suse/virtio-blk-remove-unneeded-likely-statements.patch
 	patches.suse/iova-Export-alloc_iova_fast-and-free_iova_fast.patch
 	patches.suse/cifs-update-FSCTL-definitions.patch
