--- a/series.conf
+++ b/series.conf
@@ -9048,6 +9048,7 @@
 	patches.suse/net-mlx5-SF-Use-all-available-cpu-for-setting-cpu-af.patch
 	patches.suse/net-mlx5-Update-log_max_qp-value-to-FW-max-capabilit.patch
 	patches.suse/net-mlx5e-Expose-FEC-counters-via-ethtool.patch
+	patches.suse/net-mlx5e-Unblock-setting-vid-0-for-VF-in-case-PF-is.patch
 	patches.suse/net-tls-Fix-skb-memory-leak-when-running-kTLS-traffi.patch
 	patches.suse/net-mscc-ocelot-fix-incorrect-balancing-with-down-LA.patch
 	patches.suse/can-mcp251xfd-mcp251xfd_tef_obj_read-fix-typo-in-err.patch
