netdevsim: rename 'driver' entry points (jsc#PED-1549).

--- a/series.conf
+++ b/series.conf
@@ -6036,6 +6036,7 @@
 	patches.suse/netdevsim-move-vfconfig-to-nsim_dev.patch
 	patches.suse/netdevsim-move-details-of-vf-config-to-dev.patch
 	patches.suse/netdevsim-move-max-vf-config-to-dev.patch
+	patches.suse/netdevsim-rename-driver-entry-points.patch
 	patches.suse/net-smc-Introduce-tracepoint-for-fallback
 	patches.suse/net-smc-Introduce-tracepoints-for-tx-and-rx-msg
 	patches.suse/net-smc-Introduce-tracepoint-for-smcr-link-down
