--- a/series.conf
+++ b/series.conf
@@ -11472,6 +11472,7 @@
 	patches.suse/net-mlx5e-Use-multi-table-support-for-CT-and-sample-.patch
 	patches.suse/net-mlx5e-TC-Clean-redundant-counter-flag-from-tc-ac.patch
 	patches.suse/net-mlx5e-TC-Make-post_act-parse-CT-and-sample-actio.patch
+	patches.suse/net-mlx5e-TC-Allow-sample-action-with-CT.patch
 	patches.suse/selftests-mptcp-add-csum-mib-check-for-mptcp_connect.patch
 	patches.suse/net-ibmvnic-Cleanup-workaround-doing-an-EOI-after-pa.patch
 	patches.suse/ionic-catch-transition-back-to-RUNNING-with-fw_gener.patch
