net/mlx5: Separate FDB namespace (jsc#PED-1549).

--- a/series.conf
+++ b/series.conf
@@ -8778,6 +8778,7 @@
 	patches.suse/net-mlx5e-Add-post_parse-op-to-tc-action-infrastruct.patch
 	patches.suse/net-mlx5e-Move-vlan-action-chunk-into-tc-action-vlan.patch
 	patches.suse/net-mlx5e-Move-goto-action-checks-into-tc_action-got.patch
+	patches.suse/net-mlx5-Separate-FDB-namespace.patch
 	patches.suse/gve-Correct-order-of-processing-device-options.patch
 	patches.suse/gve-Move-the-irq-db-indexes-out-of-the-ntfy-block-st.patch
 	patches.suse/gve-Update-gve_free_queue_page_list-signature.patch
