--- a/series.conf
+++ b/series.conf
@@ -10525,6 +10525,7 @@
 	patches.suse/net-mlx5e-TC-Reject-rules-with-forward-and-drop-acti-3d65492a.patch
 	patches.suse/net-mlx5e-TC-Skip-redundant-ct-clear-actions.patch
 	patches.suse/net-mlx5e-Add-feature-check-for-set-fec-counters.patch
+	patches.suse/net-mlx5e-Fix-MPLSoUDP-encap-to-use-MPLS-action-info.patch
 	patches.suse/net-mlx5e-MPLSoUDP-decap-fix-check-for-unsupported-m.patch
 	patches.suse/net-mlx5e-Add-missing-increment-of-count.patch
 	patches.suse/Revert-xen-netback-remove-hotplug-status-once-it-has.patch
