--- a/series.conf
+++ b/series.conf
@@ -11680,6 +11680,7 @@
 	patches.suse/net-mlx5-Support-GRE-conntrack-offload.patch
 	patches.suse/devlink-expose-instance-locking-and-add-locked-port-.patch
 	patches.suse/eth-nfp-wrap-locking-assertions-in-helpers.patch
+	patches.suse/eth-nfp-replace-driver-s-pf-lock-with-devlink-instan.patch
 	patches.suse/can-isotp-return-EADDRNOTAVAIL-when-reading-from-unb.patch
 	patches.suse/can-isotp-support-MSG_TRUNC-flag-when-reading-from-s.patch
 	patches.suse/bareudp-use-ipv6_mod_enabled-to-check-if-IPv6-enable.patch
