file: Export receive_fd() to modules (jsc#PED-1549).

--- a/series.conf
+++ b/series.conf
@@ -3369,6 +3369,7 @@
 	patches.suse/vdpa-Make-use-of-PFN_PHYS-PFN_UP-PFN_DOWN-helper-mac.patch
 	patches.suse/virtio-blk-remove-unneeded-likely-statements.patch
 	patches.suse/iova-Export-alloc_iova_fast-and-free_iova_fast.patch
+	patches.suse/file-Export-receive_fd-to-modules.patch
 	patches.suse/cifs-update-FSCTL-definitions.patch
 	patches.suse/cifs-rename-cifs_common-to-smbfs_common.patch
 	patches.suse/cifs-move-SMB-FSCTL-definitions-to-common-code.patch
