net/mlx5: Update log_max_qp value to FW max capability (jsc#PED-1549).

--- a/series.conf
+++ b/series.conf
@@ -9046,6 +9046,7 @@
 	patches.suse/net-mlx5-Split-irq_pool_affinity-logic-to-new-file.patch
 	patches.suse/net-mlx5-Introduce-API-for-bulk-request-and-release-.patch
 	patches.suse/net-mlx5-SF-Use-all-available-cpu-for-setting-cpu-af.patch
+	patches.suse/net-mlx5-Update-log_max_qp-value-to-FW-max-capabilit.patch
 	patches.suse/net-tls-Fix-skb-memory-leak-when-running-kTLS-traffi.patch
 	patches.suse/net-mscc-ocelot-fix-incorrect-balancing-with-down-LA.patch
 	patches.suse/can-mcp251xfd-mcp251xfd_tef_obj_read-fix-typo-in-err.patch
