nfp: flower-ct: compile match sections of flow_payload (jsc#PED-1549).

--- a/series.conf
+++ b/series.conf
@@ -661,6 +661,7 @@
 	patches.suse/nfp-flower-refactor-match-functions-to-take-flow_rul.patch
 	patches.suse/nfp-flower-refactor-action-offload-code-slightly.patch
 	patches.suse/nfp-flower-ct-calculate-required-key_layers.patch
+	patches.suse/nfp-flower-ct-compile-match-sections-of-flow_payload.patch
 	patches.suse/nfp-fix-return-statement-in-nfp_net_parse_meta.patch
 	patches.suse/compat-make-linux-compat.h-available-everywhere.patch
 	patches.suse/ethtool-improve-compat-ioctl-handling.patch
