net_sched: add __rcu annotation to netdev->qdisc (jsc#PED-1549).

--- a/series.conf
+++ b/series.conf
@@ -10389,6 +10389,7 @@
 	patches.suse/atl1c-fix-tx-timeout-after-link-flap-on-Mikrotik-10-.patch
 	patches.suse/ice-enable-parsing-IPSEC-SPI-headers-for-RSS.patch
 	patches.suse/net-dsa-mv88e6xxx-flush-switchdev-FDB-workqueue-befo.patch
+	patches.suse/net_sched-add-__rcu-annotation-to-netdev-qdisc.patch
 	patches.suse/USB-zaurus-support-another-broken-Zaurus.patch
 	patches.suse/net-phy-mediatek-remove-PHY-mode-check-on-MT7531.patch
 	patches.suse/dpaa2-eth-Initialize-mutex-used-in-one-step-timestam.patch
