igc: enable XDP metadata in driver (jsc#PED-375).

--- a/series.conf
+++ b/series.conf
@@ -8679,6 +8679,7 @@
 	patches.suse/net-stmmac-Add-platform-level-debug-register-dump-fe.patch
 	patches.suse/devlink-Simplify-devlink-resources-unregister-call.patch
 	patches.suse/igc-AF_XDP-zero-copy-metadata-adjust-breaks-SKBs-on-.patch
+	patches.suse/igc-enable-XDP-metadata-in-driver.patch
 	patches.suse/net-ice-Fix-boolean-assignment.patch
 	patches.suse/net-ice-Remove-unused-enum.patch
 	patches.suse/qed-Enhance-rammod-debug-prints-to-provide-pretty-de.patch
