net/sched: use min() macro instead of doing it manually (jsc#PED-1549).

--- a/series.conf
+++ b/series.conf
@@ -8874,6 +8874,7 @@
 	patches.suse/flow_offload-validate-flags-of-filter-and-actions.patch
 	patches.suse/bnx2x-Utilize-firmware-7.13.21.0.patch
 	patches.suse/bnx2x-Invalidate-fastpath-HSI-version-for-VFs.patch
+	patches.suse/net-sched-use-min-macro-instead-of-doing-it-manually.patch
 	patches.suse/ieee80211-change-HE-nominal-packet-padding-value-def.patch
 	patches.suse/mac80211-Remove-a-couple-of-obsolete-TODO.patch
 	patches.suse/mac80211-introduce-channel-switch-disconnect-functio.patch
