net/mlx5e: Use multi table support for CT and sample actions (jsc#PED-1549).

--- a/series.conf
+++ b/series.conf
@@ -11469,6 +11469,7 @@
 	patches.suse/net-mlx5e-Pass-actions-param-to-actions_match_suppor.patch
 	patches.suse/net-mlx5e-Add-post-act-offload-unoffload-API.patch
 	patches.suse/net-mlx5e-Create-new-flow-attr-for-multi-table-actio.patch
+	patches.suse/net-mlx5e-Use-multi-table-support-for-CT-and-sample-.patch
 	patches.suse/selftests-mptcp-add-csum-mib-check-for-mptcp_connect.patch
 	patches.suse/net-ibmvnic-Cleanup-workaround-doing-an-EOI-after-pa.patch
 	patches.suse/ionic-catch-transition-back-to-RUNNING-with-fw_gener.patch
