net/mlx5e: Add headroom only to the first fragment in legacy RQ (jsc#PED-1549).

--- a/series.conf
+++ b/series.conf
@@ -11693,6 +11693,7 @@
 	patches.suse/net-stmmac-clean-up-impossible-condition.patch
 	patches.suse/bnx2x-use-correct-format-characters.patch
 	patches.suse/net-mlx5e-Validate-MTU-when-building-non-linear-lega.patch
+	patches.suse/net-mlx5e-Add-headroom-only-to-the-first-fragment-in.patch
 	patches.suse/mt76-mt7921-fix-mt7921_queues_acq-implementation.patch
 	patches.suse/mt76-fix-monitor-mode-crash-with-sdio-driver.patch
 	patches.suse/rfkill-make-new-event-layout-opt-in.patch
