net/mlx5e: Add csum to tc action infra (jsc#PED-1549).

--- a/series.conf
+++ b/series.conf
@@ -8765,6 +8765,7 @@
 	patches.suse/net-mlx5e-Add-tc-action-infrastructure.patch
 	patches.suse/net-mlx5e-Add-goto-to-tc-action-infra.patch
 	patches.suse/net-mlx5e-Add-tunnel-encap-decap-to-tc-action-infra.patch
+	patches.suse/net-mlx5e-Add-csum-to-tc-action-infra.patch
 	patches.suse/gve-Correct-order-of-processing-device-options.patch
 	patches.suse/gve-Move-the-irq-db-indexes-out-of-the-ntfy-block-st.patch
 	patches.suse/gve-Update-gve_free_queue_page_list-signature.patch
