--- a/series.conf
+++ b/series.conf
@@ -5220,6 +5220,7 @@
 	patches.suse/crypto-pcrypt-Delay-write-to-padata-info.patch
 	patches.suse/qed-Improve-the-stack-space-of-filter_config.patch
 	patches.suse/mlxsw-spectrum-Bump-minimum-FW-version-to-xx.2008.33.patch
+	patches.suse/mlxsw-spectrum-Move-port-module-mapping-before-core-.patch
 	patches.suse/mlxsw-reg-Add-Port-Module-To-local-DataBase-Register.patch
 	patches.suse/mlxsw-spectrum-Use-PMTDB-register-to-obtain-split-in.patch
 	patches.suse/net-smc-add-support-for-user-defined-EIDs
