--- a/series.conf
+++ b/series.conf
@@ -11408,6 +11408,7 @@
 	patches.suse/igb-refactor-XDP-registration.patch
 	patches.suse/msft-hv-2528-Netvsc-Call-hv_unmap_memory-in-the-netvsc_device_rem.patch
 	patches.suse/i40e-Remove-rx-page-reuse-double-count.patch
+	patches.suse/i40e-Aggregate-and-export-RX-page-reuse-stat.patch
 	patches.suse/octeontx2-af-Don-t-enable-Pause-frames-by-default.patch
 	patches.suse/octeontx2-af-Priority-flow-control-configuration-sup.patch
 	patches.suse/octeontx2-af-Flow-control-resource-management.patch
