--- a/series.conf
+++ b/series.conf
@@ -4553,6 +4553,7 @@
 	patches.suse/RDMA-sa_query-Use-strscpy_pad-instead-of-memcpy-to-c.patch
 	patches.suse/nios2-Make-NIOS2_DTB_SOURCE_BOOL-depend-on-COMPILE_T.patch
 	patches.suse/ftrace-nds32-Update-the-proto-for-ftrace_trace_funct.patch
+	patches.suse/vduse-Disallow-injecting-interrupt-before-DRIVER_OK-.patch
 	patches.suse/virtio-ring-fix-DMA-metadata-flags.patch
 	patches.suse/Revert-watchdog-iTCO_wdt-Account-for-rebooting-on-se.patch
 	patches.suse/watchdog-sbsa-only-use-32-bit-accessors.patch
