net/mlx5e: Use dynamic per-channel allocations in stats (jsc#PED-1549).

--- a/series.conf
+++ b/series.conf
@@ -8895,6 +8895,7 @@
 	patches.suse/net-mlx5e-Add-profile-indications-for-PTP-and-QOS-HT.patch
 	patches.suse/net-mlx5e-Save-memory-by-using-dynamic-allocation-in.patch
 	patches.suse/net-mlx5e-Allow-profile-specific-limitation-on-max-n.patch
+	patches.suse/net-mlx5e-Use-dynamic-per-channel-allocations-in-sta.patch
 	patches.suse/mt76-mt7921-drop-offload_flags-overwritten.patch
 	patches.suse/mt76-mt7615-fix-possible-deadlock-while-mt7615_regis.patch
 	patches.suse/mt76-do-not-pass-the-received-frame-with-decryption-.patch
