--- a/series.conf
+++ b/series.conf
@@ -11559,6 +11559,7 @@
 	patches.suse/net-mlx4-Delete-useless-moduleparam-include.patch
 	patches.suse/net-mlx5-Delete-useless-module.h-include.patch
 	patches.suse/net-mlx5-Node-aware-allocation-for-the-IRQ-table.patch
+	patches.suse/net-mlx5-Node-aware-allocation-for-the-EQ-table.patch
 	patches.suse/ieee80211-add-EHT-1K-aggregation-definitions.patch
 	patches.suse/iwlwifi-mvm-Don-t-call-iwl_mvm_sta_from_mac80211-wit.patch
 	patches.suse/iwlwifi-mvm-offload-channel-switch-timing-to-FW.patch
