vduse: Fix race condition between resetting and irq injecting (jsc#PED-1549).

--- a/series.conf
+++ b/series.conf
@@ -4554,6 +4554,7 @@
 	patches.suse/nios2-Make-NIOS2_DTB_SOURCE_BOOL-depend-on-COMPILE_T.patch
 	patches.suse/ftrace-nds32-Update-the-proto-for-ftrace_trace_funct.patch
 	patches.suse/vduse-Disallow-injecting-interrupt-before-DRIVER_OK-.patch
+	patches.suse/vduse-Fix-race-condition-between-resetting-and-irq-i.patch
 	patches.suse/virtio-ring-fix-DMA-metadata-flags.patch
 	patches.suse/Revert-watchdog-iTCO_wdt-Account-for-rebooting-on-se.patch
 	patches.suse/watchdog-sbsa-only-use-32-bit-accessors.patch
