RDMA/mlx5: Use memset_after() to zero struct mlx5_ib_mr (jsc#PED-1552).

--- a/series.conf
+++ b/series.conf
@@ -9470,6 +9470,7 @@
 	patches.suse/RDMA-qedr-Fix-reporting-max_-send-recv-_wr-attrs.patch
 	patches.suse/RDMA-core-Let-ib_find_gid-continue-search-even-after.patch
 	patches.suse/RDMA-cma-Let-cma_resolve_ib_dev-continue-search-even.patch
+	patches.suse/RDMA-mlx5-Use-memset_after-to-zero-struct-mlx5_ib_mr.patch
 	patches.suse/iw_cxgb4-Use-memset_startat-for-cpl_t5_pass_accept_r.patch
 	patches.suse/RDMA-rxe-Fix-a-typo-in-opcode-name.patch
 	patches.suse/RDMA-mad-Delete-duplicated-init_query_mad-functions.patch
