--- a/series.conf
+++ b/series.conf
@@ -659,6 +659,7 @@
 	patches.suse/net-usb-asix-ax88772-add-missing-stop.patch
 	patches.suse/nfp-flower-make-the-match-compilation-functions-reus.patch
 	patches.suse/nfp-flower-refactor-match-functions-to-take-flow_rul.patch
+	patches.suse/nfp-flower-refactor-action-offload-code-slightly.patch
 	patches.suse/nfp-fix-return-statement-in-nfp_net_parse_meta.patch
 	patches.suse/compat-make-linux-compat.h-available-everywhere.patch
 	patches.suse/ethtool-improve-compat-ioctl-handling.patch
