--- a/series.conf
+++ b/series.conf
@@ -8894,6 +8894,7 @@
 	patches.suse/net-mlx5e-Use-bitmap-field-for-profile-features.patch
 	patches.suse/net-mlx5e-Add-profile-indications-for-PTP-and-QOS-HT.patch
 	patches.suse/net-mlx5e-Save-memory-by-using-dynamic-allocation-in.patch
+	patches.suse/net-mlx5e-Allow-profile-specific-limitation-on-max-n.patch
 	patches.suse/mt76-mt7921-drop-offload_flags-overwritten.patch
 	patches.suse/mt76-mt7615-fix-possible-deadlock-while-mt7615_regis.patch
 	patches.suse/mt76-do-not-pass-the-received-frame-with-decryption-.patch
