--- a/series.conf
+++ b/series.conf
@@ -8999,6 +8999,7 @@
 	patches.suse/net-mlx5-DR-Add-support-for-dumping-steering-info.patch
 	patches.suse/net-mlx5-DR-Add-support-for-UPLINK-destination-type.patch
 	patches.suse/net-mlx5-DR-Warn-on-failure-to-destroy-objects-due-t.patch
+	patches.suse/net-mlx5-Add-misc5-flow-table-match-parameters.patch
 	patches.suse/bpf-Do-not-WARN-in-bpf_warn_invalid_xdp_action.patch
 	patches.suse/bpf-Let-bpf_warn_invalid_xdp_action-report-more-info.patch
 	patches.suse/bpf-Introduce-composable-reg-ret-and-arg-types.patch
