--- a/series.conf
+++ b/series.conf
@@ -11705,6 +11705,7 @@
 	patches.suse/net-mlx5-DR-Remove-4-members-from-mlx5dr_ste_htbl-to.patch
 	patches.suse/net-mlx5-DR-Remove-hw_ste-from-mlx5dr_ste-to-reduce-.patch
 	patches.suse/net-mlx5-CT-Remove-extra-rhashtable-remove-on-tuple-.patch
+	patches.suse/net-mlx5-Remove-unused-exported-contiguous-coherent-.patch
 	patches.suse/mt76-mt7921-fix-mt7921_queues_acq-implementation.patch
 	patches.suse/mt76-fix-monitor-mode-crash-with-sdio-driver.patch
 	patches.suse/rfkill-make-new-event-layout-opt-in.patch
