--- a/series.conf
+++ b/series.conf
@@ -11321,6 +11321,7 @@
 	patches.suse/net-skbuff-add-size-metadata-to-skb_shared_info-for-.patch
 	patches.suse/xdp-introduce-flags-field-in-xdp_buff-xdp_frame.patch
 	patches.suse/net-xdp-add-xdp_update_skb_shared_info-utility-routi.patch
+	patches.suse/xdp-add-frags-support-to-xdp_return_-buff-frame.patch
 	patches.suse/bpf-introduce-BPF_F_XDP_HAS_FRAGS-flag-in-prog_flags.patch
 	patches.suse/ionic-fix-type-complaint-in-ionic_dev_cmd_clean.patch
 	patches.suse/ionic-start-watchdog-after-all-is-setup.patch
