iavf: switch to napi_build_skb() (jsc#PED-835).

--- a/series.conf
+++ b/series.conf
@@ -8969,6 +8969,7 @@
 	patches.suse/bnxt_en-convert-to-xdp_do_flush.patch
 	patches.suse/bnxt_en-Use-page-frag-RX-buffers-for-better-software.patch
 	patches.suse/i40e-switch-to-napi_build_skb.patch
+	patches.suse/iavf-switch-to-napi_build_skb.patch
 	patches.suse/Bluetooth-btusb-Add-one-more-Bluetooth-part-for-the-.patch
 	patches.suse/Bluetooth-btusb-Add-the-new-support-IDs-for-WCN6855.patch
 	patches.suse/Bluetooth-refactor-malicious-adv-data-check.patch
