--- a/series.conf
+++ b/series.conf
@@ -11699,6 +11699,7 @@
 	patches.suse/net-mlx5e-Drop-the-len-output-parameter-from-mlx5e_x.patch
 	patches.suse/net-mlx5e-Drop-cqe_bcnt32-from-mlx5e_skb_from_cqe_mp.patch
 	patches.suse/net-mlx5-DR-Adjust-structure-member-to-reduce-memory.patch
+	patches.suse/net-mlx5-DR-Remove-mr_addr-rkey-from-struct-mlx5dr_i.patch
 	patches.suse/mt76-mt7921-fix-mt7921_queues_acq-implementation.patch
 	patches.suse/mt76-fix-monitor-mode-crash-with-sdio-driver.patch
 	patches.suse/rfkill-make-new-event-layout-opt-in.patch
