mlxsw: Introduce flex key elements for Spectrum-4 (jsc#PED-1549).

--- a/series.conf
+++ b/series.conf
@@ -9033,6 +9033,7 @@
 	patches.suse/sfc-Use-swap-instead-of-open-coding-it.patch
 	patches.suse/veth-Do-not-record-rx-queue-hint-in-veth_xmit.patch
 	patches.suse/mlxsw-Rename-virtual-router-flex-key-element.patch
+	patches.suse/mlxsw-Introduce-flex-key-elements-for-Spectrum-4.patch
 	patches.suse/net-tls-Fix-skb-memory-leak-when-running-kTLS-traffi.patch
 	patches.suse/net-mscc-ocelot-fix-incorrect-balancing-with-down-LA.patch
 	patches.suse/can-mcp251xfd-mcp251xfd_tef_obj_read-fix-typo-in-err.patch
