--- a/series.conf
+++ b/series.conf
@@ -606,6 +606,7 @@
 	patches.suse/workqueue-Mark-barrier-work-with-WORK_STRUCT_INACTIV.patch
 	patches.suse/workqueue-Assign-a-color-to-barrier-work-items.patch
 	patches.suse/workqueue-Remove-unused-WORK_NO_COLOR.patch
+	patches.suse/bpf-Add-function-for-XDP-meta-data-length-check.patch
 	patches.suse/net-core-Split-out-code-to-run-generic-XDP-prog.patch
 	patches.suse/bitops-Add-non-atomic-bitops-for-pointers.patch
 	patches.suse/bpf-cpumap-Implement-generic-cpumap.patch
