--- a/series.conf
+++ b/series.conf
@@ -9772,6 +9772,7 @@
 	patches.suse/vdpa-mlx5-Restore-cur_num_vqs-in-case-of-failure-in-.patch
 	patches.suse/vdpa-Support-reporting-max-device-capabilities.patch
 	patches.suse/vdpa-mlx5-Report-max-device-capabilities.patch
+	patches.suse/vdpa-Avoid-taking-cf_mutex-lock-on-get-status.patch
 	patches.suse/dmaengine-idxd-rework-descriptor-free-path-on-failur.patch
 	patches.suse/dmaengine-idxd-int-handle-management-refactoring.patch
 	patches.suse/dmaengine-idxd-move-interrupt-handle-assignment.patch
