--- a/series.conf
+++ b/series.conf
@@ -11498,6 +11498,7 @@
 	patches.suse/net-mlx5-Lag-record-inactive-state-of-bond-device.patch
 	patches.suse/net-mlx5-Lag-offload-active-backup-drops-to-hardware.patch
 	patches.suse/net-mlx5-cmdif-Return-value-improvements.patch
+	patches.suse/net-mlx5-cmdif-cmd_check-refactoring.patch
 	patches.suse/sfc-default-config-to-1-channel-core-in-local-NUMA-n.patch
 	patches.suse/sfc-set-affinity-hints-in-local-NUMA-node-only.patch
 	patches.suse/tuntap-add-sanity-checks-about-msg_controllen-in-sen.patch
