i40e: Use irq_update_affinity_hint() (jsc#PED-372).

--- a/series.conf
+++ b/series.conf
@@ -9438,6 +9438,7 @@
 	patches.suse/clk-bm1880-remove-kfrees-on-static-allocations.patch
 	patches.suse/genirq-Provide-new-interfaces-for-affinity-hints.patch
 	patches.suse/iavf-Use-irq_update_affinity_hint.patch
+	patches.suse/i40e-Use-irq_update_affinity_hint.patch
 	patches.suse/be2net-Use-irq_update_affinity_hint.patch
 	patches.suse/scsi-lpfc-Use-irq_set_affinity.patch
 	patches.suse/net-mlx4-Use-irq_update_affinity_hint.patch
