vdpa: Mark vdpa_config_ops.get_vq_notification as optional (jsc#PED-1549).

--- a/series.conf
+++ b/series.conf
@@ -9756,6 +9756,7 @@
 	patches.suse/vdpa-add-driver_override-support.patch
 	patches.suse/net-mlx5_vdpa-Offer-VIRTIO_NET_F_MTU-when-setting-MT.patch
 	patches.suse/vdpa-Avoid-duplicate-call-to-vp_vdpa-get_status.patch
+	patches.suse/vdpa-Mark-vdpa_config_ops.get_vq_notification-as-opt.patch
 	patches.suse/virtio-virtio_mem-handle-a-possible-NULL-as-a-memcpy.patch
 	patches.suse/virtio_ring-mark-ring-unused-on-error.patch
 	patches.suse/vdpa-clean-up-get_config_size-ret-value-handling.patch
