--- a/series.conf
+++ b/series.conf
@@ -8971,6 +8971,7 @@
 	patches.suse/i40e-switch-to-napi_build_skb.patch
 	patches.suse/iavf-switch-to-napi_build_skb.patch
 	patches.suse/igb-switch-to-napi_build_skb.patch
+	patches.suse/igc-switch-to-napi_build_skb.patch
 	patches.suse/Bluetooth-btusb-Add-one-more-Bluetooth-part-for-the-.patch
 	patches.suse/Bluetooth-btusb-Add-the-new-support-IDs-for-WCN6855.patch
 	patches.suse/Bluetooth-refactor-malicious-adv-data-check.patch
