--- a/series.conf
+++ b/series.conf
@@ -8864,6 +8864,7 @@
 	patches.suse/iavf-Restrict-maximum-VLAN-filters-for-VIRTCHNL_VF_O.patch
 	patches.suse/flow_offload-reject-to-offload-tc-actions-in-offload.patch
 	patches.suse/flow_offload-add-index-to-flow_action_entry-structur.patch
+	patches.suse/flow_offload-rename-offload-functions-with-offload-i.patch
 	patches.suse/bnx2x-Utilize-firmware-7.13.21.0.patch
 	patches.suse/bnx2x-Invalidate-fastpath-HSI-version-for-VFs.patch
 	patches.suse/ieee80211-change-HE-nominal-packet-padding-value-def.patch
