--- a/series.conf
+++ b/series.conf
@@ -8897,6 +8897,7 @@
 	patches.suse/net-mlx5e-Allow-profile-specific-limitation-on-max-n.patch
 	patches.suse/net-mlx5e-Use-dynamic-per-channel-allocations-in-sta.patch
 	patches.suse/net-mlx5e-Allocate-per-channel-stats-dynamically-at-.patch
+	patches.suse/net-mlx5e-Take-packet_merge-params-directly-from-the.patch
 	patches.suse/mt76-mt7921-drop-offload_flags-overwritten.patch
 	patches.suse/mt76-mt7615-fix-possible-deadlock-while-mt7615_regis.patch
 	patches.suse/mt76-do-not-pass-the-received-frame-with-decryption-.patch
