net/mlx5: Let user configure max_macs generic param (jsc#PED-1549).

--- a/series.conf
+++ b/series.conf
@@ -8889,6 +8889,7 @@
 	patches.suse/net-mlx5-Let-user-configure-io_eq_size-param-0844fa5f.patch
 	patches.suse/devlink-Add-new-event_eq_size-generic-device-param.patch
 	patches.suse/net-mlx5-Let-user-configure-event_eq_size-param-57ca7678.patch
+	patches.suse/net-mlx5-Let-user-configure-max_macs-generic-param.patch
 	patches.suse/mt76-mt7921-drop-offload_flags-overwritten.patch
 	patches.suse/mt76-mt7615-fix-possible-deadlock-while-mt7615_regis.patch
 	patches.suse/mt76-do-not-pass-the-received-frame-with-decryption-.patch
