--- a/series.conf
+++ b/series.conf
@@ -11551,6 +11551,7 @@
 	patches.suse/net-mlx5-DR-Remove-unneeded-comments.patch
 	patches.suse/net-mlx5-DR-Fix-handling-of-different-actions-on-the.patch
 	patches.suse/net-mlx5-DR-Rename-action-modify-fields-to-reflect-n.patch
+	patches.suse/net-mlx5-DR-Refactor-ste_ctx-handling-for-STE-v0-1.patch
 	patches.suse/can-isotp-set-default-value-for-N_As-to-50-micro-sec.patch
 	patches.suse/vxcan-enable-local-echo-for-sent-CAN-frames.patch
 	patches.suse/can-etas_es58x-es58x_fd_rx_event_msg-initialize-rx_e.patch
