--- a/series.conf
+++ b/series.conf
@@ -6020,6 +6020,7 @@
 	patches.suse/ice-Remove-boolean-vlan_promisc-flag-from-function.patch
 	patches.suse/ice-Clear-synchronized-addrs-when-adding-VFs-in-swit.patch
 	patches.suse/ice-Hide-bus-info-in-ethtool-for-PRs-in-switchdev-mo.patch
+	patches.suse/virtchnl-Remove-unused-VIRTCHNL_VF_OFFLOAD_RSVD-defi.patch
 	patches.suse/iavf-Add-helper-function-to-go-from-pci_dev-to-adapt.patch
 	patches.suse/iavf-Fix-kernel-BUG-in-free_msi_irqs.patch
 	patches.suse/msft-hv-2473-net-mana-Fix-the-netdev_err-s-vPort-argument-in-mana.patch
