--- a/series.conf
+++ b/series.conf
@@ -11365,6 +11365,7 @@
 	patches.suse/net-mlx5e-TC-Reject-rules-with-multiple-CT-actions.patch
 	patches.suse/net-mlx5e-TC-Hold-sample_attr-on-stack-instead-of-po.patch
 	patches.suse/net-mlx5e-CT-Don-t-set-flow-flag-CT-for-ct-clear-flo.patch
+	patches.suse/net-mlx5e-Refactor-eswitch-attr-flags-to-just-attr-f.patch
 	patches.suse/ethtool-add-header-data-split-indication.patch
 	patches.suse/bnxt-report-header-data-split-state.patch
 	patches.suse/Bluetooth-btintel-Fix-WBS-setting-for-Intel-legacy-R.patch
