--- a/series.conf
+++ b/series.conf
@@ -8881,6 +8881,7 @@
 	patches.suse/igc-Remove-unused-_I_PHY_ID-define.patch
 	patches.suse/igc-Remove-unused-phy-type.patch
 	patches.suse/igc-Remove-obsolete-nvm-type.patch
+	patches.suse/igc-Remove-obsolete-mask.patch
 	patches.suse/devlink-Add-new-io_eq_size-generic-device-param.patch
 	patches.suse/devlink-Add-new-event_eq_size-generic-device-param.patch
 	patches.suse/mt76-mt7921-drop-offload_flags-overwritten.patch
