--- a/series.conf
+++ b/series.conf
@@ -11324,6 +11324,7 @@
 	patches.suse/xdp-add-frags-support-to-xdp_return_-buff-frame.patch
 	patches.suse/bpf-introduce-BPF_F_XDP_HAS_FRAGS-flag-in-prog_flags.patch
 	patches.suse/bpf-introduce-bpf_xdp_get_buff_len-helper.patch
+	patches.suse/bpf-add-frags-support-to-the-bpf_xdp_adjust_tail-API.patch
 	patches.suse/ionic-fix-type-complaint-in-ionic_dev_cmd_clean.patch
 	patches.suse/ionic-start-watchdog-after-all-is-setup.patch
 	patches.suse/ionic-Don-t-send-reset-commands-if-FW-isn-t-running.patch
