--- a/series.conf
+++ b/series.conf
@@ -11677,6 +11677,7 @@
 	patches.suse/msft-hv-2552-net-netvsc-remove-break-after-return.patch
 	patches.suse/net-mlx4_en-use-kzalloc.patch
 	patches.suse/net-mlx5e-Fix-use-after-free-in-mlx5e_stats_grp_sw_u.patch
+	patches.suse/net-mlx5-Support-GRE-conntrack-offload.patch
 	patches.suse/devlink-expose-instance-locking-and-add-locked-port-.patch
 	patches.suse/can-isotp-return-EADDRNOTAVAIL-when-reading-from-unb.patch
 	patches.suse/can-isotp-support-MSG_TRUNC-flag-when-reading-from-s.patch
