PCI/IOV: Add pci_iov_vf_id() to get VF index (jsc#PED-1549).

--- a/series.conf
+++ b/series.conf
@@ -11310,6 +11310,7 @@
 	patches.suse/msft-hv-2542-drivers-hv-log-when-enabling-crash_kexec_post_notifi.patch
 	patches.suse/msft-hv-2549-hv_balloon-rate-limit-Unhandled-message-warning.patch
 	patches.suse/msft-hv-2551-x86-hyperv-Output-host-build-info-as-normal-Windows-.patch
+	patches.suse/PCI-IOV-Add-pci_iov_vf_id-to-get-VF-index.patch
 	patches.suse/bpf-Fix-UAF-due-to-race-between-btf_try_get_module-a.patch
 	patches.suse/net-skbuff-add-size-metadata-to-skb_shared_info-for-.patch
 	patches.suse/xdp-introduce-flags-field-in-xdp_buff-xdp_frame.patch
