iavf: Add support for 50G/100G in AIM algorithm (jsc#PED-835).

--- a/series.conf
+++ b/series.conf
@@ -11508,6 +11508,7 @@
 	patches.suse/sfc-default-config-to-1-channel-core-in-local-NUMA-n.patch
 	patches.suse/sfc-set-affinity-hints-in-local-NUMA-node-only.patch
 	patches.suse/tuntap-add-sanity-checks-about-msg_controllen-in-sen.patch
+	patches.suse/iavf-Add-support-for-50G-100G-in-AIM-algorithm.patch
 	patches.suse/qed-display-VF-trust-config.patch
 	patches.suse/qed-validate-and-restrict-untrusted-VFs-vlan-promisc.patch
 	patches.suse/bpf-Add-config-to-allow-loading-modules-with-BTF-mis.patch
