net/mlx5: Refactor mlx5_get_flow_namespace (jsc#PED-1549).

--- a/series.conf
+++ b/series.conf
@@ -8779,6 +8779,7 @@
 	patches.suse/net-mlx5e-Move-vlan-action-chunk-into-tc-action-vlan.patch
 	patches.suse/net-mlx5e-Move-goto-action-checks-into-tc_action-got.patch
 	patches.suse/net-mlx5-Separate-FDB-namespace.patch
+	patches.suse/net-mlx5-Refactor-mlx5_get_flow_namespace.patch
 	patches.suse/gve-Correct-order-of-processing-device-options.patch
 	patches.suse/gve-Move-the-irq-db-indexes-out-of-the-ntfy-block-st.patch
 	patches.suse/gve-Update-gve_free_queue_page_list-signature.patch
