mlxsw: Track per-module port status (jsc#PED-1549).

--- a/series.conf
+++ b/series.conf
@@ -5254,6 +5254,7 @@
 	patches.suse/mlxsw-core_env-Convert-module_info_lock-to-a-mutex.patch
 	patches.suse/mlxsw-spectrum-Do-not-return-an-error-in-ndo_stop.patch
 	patches.suse/mlxsw-spectrum-Do-not-return-an-error-in-mlxsw_sp_po.patch
+	patches.suse/mlxsw-Track-per-module-port-status.patch
 	patches.suse/net-chelsio-cxgb4vf-Make-use-of-the-helper-function-.patch
 	patches.suse/octeontx2-pf-CN10K-Hide-RPM-stats-over-ethtool.patch
 	patches.suse/octeontx2-af-Hardware-configuration-for-inline-IPsec.patch
