net/mlx5: DR, Align mlx5dv_dr API vport action with FW behavior (jsc#PED-1549).

--- a/series.conf
+++ b/series.conf
@@ -11546,6 +11546,7 @@
 	patches.suse/net-mlx5-Move-debugfs-entries-to-separate-struct.patch
 	patches.suse/net-mlx5-Add-pages-debugfs.patch
 	patches.suse/net-mlx5-Add-debugfs-counters-for-page-commands-fail.patch
+	patches.suse/net-mlx5-DR-Align-mlx5dv_dr-API-vport-action-with-FW.patch
 	patches.suse/can-isotp-set-default-value-for-N_As-to-50-micro-sec.patch
 	patches.suse/vxcan-enable-local-echo-for-sent-CAN-frames.patch
 	patches.suse/can-etas_es58x-es58x_fd_rx_event_msg-initialize-rx_e.patch
