i40e: Add new versions of send ASQ command functions (jsc#PED-372).

--- a/series.conf
+++ b/series.conf
@@ -11397,6 +11397,7 @@
 	patches.suse/i40e-Disable-hw-tc-offload-feature-on-driver-load.patch
 	patches.suse/i40e-Remove-unused-RX-realloc-stat.patch
 	patches.suse/i40e-Add-sending-commands-in-atomic-context.patch
+	patches.suse/i40e-Add-new-versions-of-send-ASQ-command-functions.patch
 	patches.suse/msft-hv-2523-net-mana-Add-handling-of-CQE_RX_TRUNCATED.patch
 	patches.suse/msft-hv-2524-net-mana-Remove-unnecessary-check-of-cqe_type-in-man.patch
 	patches.suse/bnx2x-Replace-one-element-array-with-flexible-array-.patch
