vDPA/ifcvf: enable multiqueue and control vq (jsc#PED-1549).

--- a/series.conf
+++ b/series.conf
@@ -3359,6 +3359,7 @@
 	patches.suse/vDPA-ifcvf-introduce-get_dev_type-which-returns-virt.patch
 	patches.suse/vDPA-ifcvf-implement-management-netlink-framework-fo.patch
 	patches.suse/vDPA-ifcvf-detect-and-use-the-onboard-number-of-queu.patch
+	patches.suse/vDPA-ifcvf-enable-multiqueue-and-control-vq.patch
 	patches.suse/virtio-blk-remove-unneeded-likely-statements.patch
 	patches.suse/iova-Export-alloc_iova_fast-and-free_iova_fast.patch
 	patches.suse/cifs-update-FSCTL-definitions.patch
