net/sched: flow_dissector: Fix matching on zone id for invalid conns (jsc#PED-1549).

--- a/series.conf
+++ b/series.conf
@@ -8218,6 +8218,7 @@
 	patches.suse/ALSA-rawmidi-fix-the-uninitalized-user_pversion.patch
 	patches.suse/ALSA-hda-realtek-Fix-quirk-for-Clevo-NJ51CU.patch
 	patches.suse/net-sched-Extend-qdisc-control-block-with-tc-control.patch
+	patches.suse/net-sched-flow_dissector-Fix-matching-on-zone-id-for.patch
 	patches.suse/net-marvell-prestera-fix-incorrect-return-of-port_fi.patch
 	patches.suse/net-marvell-prestera-fix-incorrect-structure-access.patch
 	patches.suse/tun-avoid-double-free-in-tun_free_netdev.patch
