net/mlx5e: Use a barrier after updating txq2sq (jsc#PED-1549).

--- a/series.conf
+++ b/series.conf
@@ -11448,6 +11448,7 @@
 	patches.suse/net-mlx5e-Use-FW-limitation-for-max-MPW-WQEBBs.patch
 	patches.suse/net-mlx5e-Cleanup-of-start-stop-all-queues.patch
 	patches.suse/net-mlx5e-Disable-TX-queues-before-registering-the-n.patch
+	patches.suse/net-mlx5e-Use-a-barrier-after-updating-txq2sq.patch
 	patches.suse/selftests-mptcp-add-csum-mib-check-for-mptcp_connect.patch
 	patches.suse/net-ibmvnic-Cleanup-workaround-doing-an-EOI-after-pa.patch
 	patches.suse/ionic-catch-transition-back-to-RUNNING-with-fw_gener.patch
