net/mlx5e: MPLSoUDP decap, use vlan push_eth instead of pedit (jsc#PED-1549).

--- a/series.conf
+++ b/series.conf
@@ -11688,6 +11688,7 @@
 	patches.suse/can-isotp-support-MSG_TRUNC-flag-when-reading-from-s.patch
 	patches.suse/bareudp-use-ipv6_mod_enabled-to-check-if-IPv6-enable.patch
 	patches.suse/net-sched-add-vlan-push_eth-and-pop_eth-action-to-th.patch
+	patches.suse/net-mlx5e-MPLSoUDP-decap-use-vlan-push_eth-instead-o.patch
 	patches.suse/net-stmmac-clean-up-impossible-condition.patch
 	patches.suse/bnx2x-use-correct-format-characters.patch
 	patches.suse/mt76-mt7921-fix-mt7921_queues_acq-implementation.patch
