ixgbevf: Improve error handling in mailbox (jsc#PED-373).

--- a/series.conf
+++ b/series.conf
@@ -8637,6 +8637,7 @@
 	patches.suse/stmmac-fix-build-due-to-brainos-in-trans_start-chang.patch
 	patches.suse/net-stmmac-dwmac-qcom-ethqos-add-platform-level-cloc.patch
 	patches.suse/ixgbevf-Rename-MSGTYPE-to-SUCCESS-and-FAILURE.patch
+	patches.suse/ixgbevf-Improve-error-handling-in-mailbox.patch
 	patches.suse/tcp-add-missing-htmldocs-for-skb-ll_node-and-sk-defe.patch
 	patches.suse/mlxsw-constify-address-in-mlxsw_sp_port_dev_addr_set.patch
 	patches.suse/ipw2200-constify-address-in-ipw_send_adapter_address.patch
