vdpa/mlx5: Decouple virtqueue callback from struct mlx5_vdpa_virtqueue (jsc#PED-1549).

--- a/series.conf
+++ b/series.conf
@@ -3362,6 +3362,7 @@
 	patches.suse/vDPA-ifcvf-enable-multiqueue-and-control-vq.patch
 	patches.suse/vdpa-mlx5-Remove-redundant-header-file-inclusion.patch
 	patches.suse/vdpa-mlx5-function-prototype-modifications-in-prepar.patch
+	patches.suse/vdpa-mlx5-Decouple-virtqueue-callback-from-struct-ml.patch
 	patches.suse/virtio-blk-remove-unneeded-likely-statements.patch
 	patches.suse/iova-Export-alloc_iova_fast-and-free_iova_fast.patch
 	patches.suse/cifs-update-FSCTL-definitions.patch
